--- a/maxwell.css
+++ b/maxwell.css
@@ -7,7 +7,6 @@ body {
 .fixed-header,
 footer {
     background-color: #8B0000;
-    /* Dark red for header and footer */
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -32,33 +31,88 @@ footer {
     display: flex;
     margin-top: 80px;
     margin-bottom: 50px;
+    align-items: flex-start;
+
 }
 
-.sidebar {
-    width: 25%;
-    padding: 10px;
-    background-color: #f7f7f7;
-    height: 100vh;
-    padding-top: 40px;
-    padding-bottom: 150px;
-    overflow-y: auto;
-    position: fixed;
-}
+
 
 main {
     margin-left: 25%;
     padding: 20px;
     flex-grow: 1;
     background-color: #fff;
-    overflow-y: auto;
-    max-height: calc(100vh - 130px);
+    min-height: calc(100vh - 130px);
+}
+
+.sidebar {
+    width: 25%;
+    padding: 10px;
+    background-color: #f7f7f7;
+    position: fixed;
+    top: 85px;
+    bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 .card {
-    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 5px;
+    border: 1px solid #ddd;
+    background-color: white;
+    flex: 1;
 }
 
-.carousel-item img {
-    height: 300px;
+.card-img-top {
+    width: 100%;
+    height: 60px;
     object-fit: cover;
+    object-position: center;
+}
+
+.card-body {
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.card-body p {
+    font-size: 11px;
+    margin: 0;
+    line-height: 1.2;
+}
+
+
+
+.carousel-item img {
+    height: 500px;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .content {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+        position: static;
+        top: 0;
+        bottom: 0;
+    }
+
+    main {
+        margin-left: 0;
+    }
+
+    .card-img-top {
+        max-height: 150px;
+    }
 }
